# thc-meal-prep-planner

./: .gitignore  CODE_STYLE.md  CONTRIBUTING.md  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  milestone.md  question.md
.github/workflows/: ci.yml  deploy-pages.yml
app/: layout.tsx  page.tsx
app/grocery-list/: page.tsx
app/grocery-list/components/: GroceryListClient.tsx
calendars/: .gitkeep
constraints/: .gitkeep  enhanced_constraints.yaml  sample_constraints.yaml
docs/: CONSTRAINT_SCHEMAS.md  DEPLOYMENT.md  DOCUMENTATION_STANDARDS.md  IMPLEMENTATION_SUMMARY.md  LLM_INTEGRATION.md  MILESTONES_SUMMARY.md  MILESTONE_TRACKING.md  ONBOARDING.md  PRD.md  ROADMAP.md  STANDARDS_REFERENCE.md  WEBSITE_DEVELOPMENT.md
history/: .gitkeep  history_2026-01-20.json
lib/: meals.ts
plans/: .gitkeep  grocery_list_2026-01-20.md  meal_plan_2026-01-20.md
profiles/: .gitkeep  ashuah.md  roddy.md
public/: .nojekyll  robots.txt
recipes/: .gitkeep  breakfast-burritos.md  fish-tacos.md  grilled-chicken-salad.md  mediterranean-quinoa-bowl.md  overnight-oats.md  veggie-stir-fry.md
scripts/: .gitkeep  generate_meal_plan.py  grocery_list_generator.py  history_utils.py  llm_utils.py  variety_scoring.py
site/: .gitkeep
